--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
     <header class="principal">
         <div class="container">
-            <section class="botonesEncriptadores">
-                <button class="encriptar" onclick="btnEncriptar()">encriptar</button>
-                <button class="desencriptar" onclick="btnDesencriptar()"> Desencriptar </button>
-          </section>  <textarea cols="60" rows="2" maxlength="200" id='input-texto' class='input-texto'></textarea>
+            <textarea cols="60" rows="2" maxlength="200" id='input-texto' class='input-texto'></textarea>
             <section class="botonesEncriptadores2">    
                 <button class="copiar" onclick="copiar()"><mark>Copiar</mark> <img  src="imagenes/logoalura.png"></button>
                 <button class="pegar"> <mark>Pegar</mark><img src="imagenes/logoalura.png"></button>
-                </section>
+                </section>  <section class="botonesEncriptadores">
+                    <button class="encriptar" onclick="btnEncriptar()">encriptar</button>
+                    <button class="desencriptar" onclick="btnDesencriptar()"> Desencriptar </button>
+              </section>
+              
                         <section class="showText">
                 <input type="button"  value="Solo letras minúsculas y sin acentos..." class="mensaje" cols="20" rows="2">
                 <form name="commentform" class="panel" action="#" target="_blank">
@@ -30,7 +31,7 @@
                 </div>
                 
 <main class="seccion1Botones">
-    <table>
+    <table >
                                     <thead>
                                             <tbody>
                                                   <tr>
