--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <header class="principal">
         <div class="container">
             <textarea cols="60" rows="2" maxlength="200" id='input-texto' class='input-texto'></textarea>
-            <section class="botonesEncriptadores2">    
-                <button class="copiar" onclick="copiar()"><mark>Copiar</mark> <img  src="imagenes/logoalura.png"></button>
-                <button class="pegar"> <mark>Pegar</mark><img src="imagenes/logoalura.png"></button>
-                </section>  <section class="botonesEncriptadores">
+             <section class="botonesEncriptadores">
                     <button class="encriptar" onclick="btnEncriptar()">encriptar</button>
                     <button class="desencriptar" onclick="btnDesencriptar()"> Desencriptar </button>
               </section>
