--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Combo&display=swap');
     </style>
+    	<link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="sty.css">
     <title>Document</title>
 </head>
@@ -19,9 +20,7 @@
              <section class="botonesEncriptadores">
                     <button class="encriptar" onclick="btnEncriptar()">encriptar</button>
                     <button class="desencriptar" onclick="btnDesencriptar()"> Desencriptar </button>
-              </section>
-              
-                        <section class="showText">
+        
                 <input type="button"  value="Solo letras minúsculas y sin acentos..." class="mensaje" cols="20" rows="2">
                 <form name="commentform" class="panel" action="#" target="_blank">
                 </section>
